@@ -213,17 +213,20 @@ Display info on the selected entry (user, agent, group...)\&. For users, resourc
 Move the current buddy to the requested group\&. If no group is specified, then the buddy is moved to the default group\&. Tip: if the chatmode is enabled, you can use "/roster alternate" to jump to the moved buddy\&.
 
 .TP
-\fB/msay\fR begin|verbatim|send|send_to|abort
+\fB/msay\fR begin|verbatim|send|send_to|toggle|abort
 Send a multi\-line message\&. To write a single message with several lines, the \fImulti\-line mode\fR should be used\&.
 
 In multi\-line mode, each line (except command lines) typed in the input line will be added to the multi\-line message\&. Once the message is finished, it can be sent to the current selected buddy with the "/msay send" command\&.
 
 The \fIverbatim\fR multi\-line mode disables commands, so that it is possible to enter lines starting with a slash\&. Only the "/msay" command (with send or abort parameters) can be used to exit verbatim mode\&.
 
+The \fItoggle\fR subcommand can be bound to a key to use the multi\-line mode quickly (for example, "bind M13 = msay toggle" to switch using the Meta\-Enter combination)\&.
+
  \fBbegin\fR      	enter multi\-line mode
  \fBverbatim\fR   	enter verbatim multi\-line mode
  \fBsend\fR       	send the current multi\-line message to the currently selected buddy
- \fIsend_to\fR jid	send the current multi\-line message to "jid"
+ \fBsend_to\fR jid	send the current multi\-line message to "jid"
+ \fBtoggle\fR     	switch to/from multi\-line mode (begin/send)
  \fBabort\fR      	leave multi\-line mode without sending the message
 
 .TP
